Log entity death, projectile launch, projectile hit, chunk load/unload, block place, block break